initial header implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class='applicationBody'>
-  <span>
-    Welcome to {{title}}!
-  </span>
+  <header></header>
+  <div class='welcomeMessage'>
+    Welcome to {{title}}! {{title}} is a battle game!
+  </div>
 </div>
