--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,33 @@
 .applicationBody {
   padding: 0px 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.welcomeMessage {
+  width: 100%;
+  padding: 32px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+  .applicationBody {
+    padding: 0px 16px;
+  }
+
+  .welcomeMessage {
+    padding: 16px;
+  }
+}
+
+@media (max-width: 414px) {
+  .applicationBody {
+    padding: 0px;
+  }
+
+  .welcomeMessage {
+    padding: 8px;
+  }
 }
