first introduction of heroes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   <div class='welcomeMessage'>
     Welcome to {{title}}! {{title}} is a battle game!
   </div>
+  <hero-presentation></hero-presentation>
 </div>
