--- a/src/app/hero/hero-presentation.scss
+++ b/src/app/hero/hero-presentation.scss
@@ -4,10 +4,22 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
 }
 
 .heroCard {
   @include heroCard($backgroundColor: lightblue, $width: 180px, $height: 120px);
+}
+
+.heroSelected {
+  background-color: red;
+  &:hover {
+    background-color: green;
+  }
+}
+
+.heroSelectedButton {
+  
 }
 
 .statistics {
