--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,7 @@
 .heroPresentationBox {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   padding: 0px 32px;
   box-sizing: border-box;
