refactor routes & hero, add router-outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
     Welcome to {{title}}! {{title}} is a battle game!
   </div>
 </div>
-<hero-presentation class='heroPresentationBox'></hero-presentation>
+<router-outlet></router-outlet>
